# ADFwithARCore

./: .gitignore  CodeMaid v10.4.53.vsix  CodeMaid.config  README.md  license.txt
ADF2Plugin/: AndroidManifest.xml  README.txt  local.properties
ADF2Plugin/jni/: Android.mk  Application.mk  main.cc
OpenCV_matching/: CMakeLists.txt  testprog.cpp
OpenCV_relocalisation/: CMakeLists.txt  testprog.cpp
Unity_ARcore/Assets/ARaction/Materials/: 3dFontCulled.mat
Unity_ARcore/Assets/ARaction/Prefabs/: CardinalDirectionText.prefab
Unity_ARcore/Assets/ARaction/Scenes/: ARCompassTest.unity  ARCoreTest.unity
Unity_ARcore/Assets/ARaction/ScriptableObjects/: Geometric Smoothing Param Setter.asset  Geometric Smoothing.asset  Moving Window Smoothing Param Setter.asset  Moving Window Smoothing.asset  (+2 more)
Unity_ARcore/Assets/PermissionGranter/: PermissionGranterUnity.cs  SimpleJSON.cs  readme.txt
Unity_ARcore/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
common/: utils.cc  utils.h
dataset/: 00000000.dsc  00000000.txt  00000001.dsc  00000001.txt  00000002.dsc  00000002.txt  00000003.dsc  00000003.txt  00000004.dsc  00000004.txt  00000005.dsc  00000005.txt  00000006.dsc  00000006.txt  00000007.dsc  00000007.txt  00000008.dsc  00000008.txt  00000009.dsc  00000009.txt  00000010.dsc  00000010.txt  00000011.dsc  00000011.txt  00000012.dsc  00000012.txt  00000013.dsc  00000013.txt  00000014.dsc  00000014.txt  00000015.dsc  00000015.txt  00000016.dsc  00000016.txt  00000017.dsc  00000017.txt  00000018.dsc  00000018.txt  00000019.dsc  00000019.txt  (+115 more)
(+52 files in other folders)
